# INI_File_Parser_cmake

./: CMakeLists.txt  click_me.sh
source/: main.cpp
source/ini_files/: file1.ini
source/ini_parser/: ini_parser.cpp  ini_parser.h
